# alphapilot

./: .gitignore  Dockerfile  README.md  STATUS.md  zeabur.yaml
alphapilot-upload/: AlphaPilot.md  DECISIONS-v1.md  ZEABUR-DEPLOY.md
alphapilot-upload/backend/: README.md  pyproject.toml
alphapilot-upload/backend/app/: __init__.py  ashare_client.py  config.py  db.py  main.py  paypal.py  polygon.py
alphapilot-upload/backend/app/routers/: auth.py  health.py  paypal.py  ping.py
alphapilot-upload/backend/app/schemas/: auth.py
alphapilot-upload/backend/tests/: bench_akshare.py  bench_eastmoney_alt.py  bench_sources.py  test_ashare.py  test_health.py
alphapilot-upload/frontend/app/: layout.tsx
alphapilot-upload/frontend/components/: HeaderBar.tsx
alphapilot-upload/frontend/lib/: cn-mock.ts
alphapilot-upload/research/: POLYGON-WEBSOCKET-RESEARCH.md
backend/: .env.example  .gitignore  Dockerfile  alphapilot.db  docker-compose.yml  requirements.txt
backend/app/: auth.py  cache.py  config.py  eastmoney.py
backend/app/routers/: cn.py  screener.py
backend/app/schemas/: screener.py  stock.py
backend/app/services/: auth_service.py  screener_service.py
designs/stitch/: AlphaPilot Design Code.md  STITCH-INDEX.md  alphapilot_design.md
designs/stitch/alphapilot_backtesting/: code.html
frontend/: .env.example  .gitignore  Dockerfile  README.md  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  page.tsx
frontend/app/cn/: page.tsx
frontend/lib/: auth.tsx  i18n.tsx  types.ts
research/: STRIPE-PAYMENTS-KYC-RESEARCH.md
(+12 files in other folders)
