[project]
name = "alphapilot-backend"
version = "0.1.0"
description = "AlphaPilot AI stock decision platform — FastAPI backend"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"
